...
                    contentDescription = stringResource(R.string.cancel)
                )
            }
        },
        actions = {
            IconButton(
                modifier = Modifier.testTag("save_button"),
                enabled = state.saveEnabled,
                onClick = {
                    viewModel.saveSettings()
                    onDismiss()
                    if (serverUrlDidChange) onReloadRequested() // reload if the serverURL changed
                },
...
                        RadioButton(
                            selected = merchant.merchantId == selectedAccount?.merchantId,
                            onClick = null, // onClick handled by row
                        )
                        OutlinedTextField(
                            modifier = Modifier
                                .testTag("other_account_input")
                                .fillMaxWidth(),
                            value = merchant.merchantId,
                            onValueChange = onOtherAccountInputChanged,
                            label = { Text(stringResource(R.string.other)) },
                            placeholder = { Text(stringResource(R.string.account_id_placeholder)) },
                        )
...
