...
    ) {
        ConnectExampleScaffold(
            title = stringResource(R.string.connect_sdk_example),
            actions = (embeddedComponentAsync is Success).then {
                {
                    IconButton(
                        modifier = Modifier.testTag("settings_button"),
                        onClick = openSettings
                    ) {
                        Icon(
                            painter = painterResource(R.drawable.ic_material_settings),
                            contentDescription = stringResource(R.string.settings),
                        )
...
                openSettings = openSettings,
            ) { embeddedComponentManager ->
                val onboardingSettings = settingsState.onboardingSettings
                val onboardingController = remember(embeddedComponentManager, onboardingSettings) {
                    val controller = embeddedComponentManager.createAccountOnboardingController(
                        activity = context,
                        title = "Account Onboarding",
                        props = onboardingSettings.toProps(),
                    )
                    val logTag = "AccountOnboarding"
                    val listener = object : AccountOnboardingListener {
                        override fun onLoaderStart() {
                            Log.d(logTag, "onLoaderStart")
...
