...
        preferSideBySide = true,
        stackedSpacing = 16.dp,
        primary = FooterButton(
            onClick = onContinueClick,
            enabled = enableButtons,
            loading = primaryButtonLoading,
            testTag = "existing_email-button",
            content = { Text(text = ctaContinue) },
        ),
        secondary = FooterButton(
            onClick = onSkipClicked,
            enabled = enableButtons,
            loading = secondaryButtonLoading,
...
