...
        FinancialConnectionsButton(
            type = FinancialConnectionsButton.Type.Secondary,
            onClick = onSkipClick,
            modifier = Modifier
                .fillMaxWidth()
                .semantics { testTagsAsResourceId = true }
                .testTag("skip_cta")
        ) {
            Text(text = payload.content.skipCta)
        }
    }
}

...
