appId: com.stripe.android.financialconnections.example
tags:
  - all
  - edge
  - testmode-payments
---
- startRecording: ${'/tmp/test_results/testmode-paymentintent-testinstitution-networking-returning-user-' + new Date().getTime()}
- clearState
- openLink: stripeconnectionsexample://playground?flow=PaymentIntent&financial_connections_override_native=native&merchant=networking_testmode&permissions=transactions,payment_method
- tapOn:
    id: "Customer email setting"
- inputText: "email@email.com"
- hideKeyboard
- tapOn:
    id: "connect_accounts"
# Wait until the consent button is visible
- extendedWaitUntil:
    visible:
      id: "consent_cta"
    timeout: 30000
- tapOn:
    id: "consent_cta"
# LINK WARMUP PANE
- extendedWaitUntil:
    visible:
      id: "existing_email-button"
    timeout: 5000
- assertNotVisible:
    id: "top-app-bar-back-button"
- tapOn:
    id: "existing_email-button"
# OTP SCREEN
- extendedWaitUntil:
    visible: "Save your account to Link"
    timeout: 5000
- assertVisible:
    id: "top-app-bar-back-button"
- inputText: "000000"
# SELECT ACCOUNT
- extendedWaitUntil:
    visible: "Select account"
    timeout: 5000
- tapOn: "Account Closed"
- tapOn: "Connect account"
# EMAIL OTP SCREEN
- waitForAnimationToEnd
- inputText: "000000"
# CONFIRM AND COMPLETE
- waitForAnimationToEnd
- assertVisible: "Success"
- stopRecording
