appId: com.stripe.android.financialconnections.example
tags:
  - all
  - edge
  - testmode-token
---
- startRecording: ${'/tmp/test_results/testmode-token_manualentry-' + new Date().getTime()}
- clearState
- openLink: stripeconnectionsexample://playground?integration_type=Standalone&experience=FinancialConnections&flow=Token&financial_connections_override_native=native&financial_connections_test_mode=true&merchant=testmode&permissions=balances,payment_method
- scrollUntilVisible:
    element:
      id: "connect_accounts"
    timeout: 30000
- tapOn:
    id: "connect_accounts"
# Wait until the consent button is visible
- extendedWaitUntil:
    visible:
      id: "consent_cta"
    timeout: 30000
- tapOn: "Manually verify instead"
# MANUALLY ENTER BANK ACCOUNT
- assertVisible: "Enter bank details"
- tapOn:
    id: "RoutingInput"
- inputText: "110000000"
- back
- scroll
- tapOn:
    id: "AccountInput"
- inputText: "000123456789"
- back
- scroll
- tapOn:
    id: "ConfirmAccountInput"
- inputText: "000123456789"
- tapOn:
    text: "Submit"
    retryTapIfNoChange: false
# SKIP NETWORKING
- extendedWaitUntil:
    visible:
      id: "skip_cta"
    timeout: 30000
- tapOn:
    id: "skip_cta"
    optional: true # Networking might not be enabled
# CONFIRM AND COMPLETE
- extendedWaitUntil:
    visible:
      id: "done_button"
    timeout: 30000
- tapOn:
    id: "done_button"
- scrollUntilVisible:
    element:
      text: ".*Completed!.*"
- stopRecording
